removes submit button from form

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			<input type="text" id="expiry" name="expiry"><br><br>
 			<label for="cvc">CVC:</label>
 			<input type="text" id="cvc" name="cvc"><br><br>
-			<input type="submit" value="Submit">
 		</form> 
+		<button>Submit</button>
 
     </body>
 </html> 
